# asa

./: .gitignore  00_START_HERE.md  ADVANCED_TECHNICAL_INDEX.md  ADVANCED_TECHNICAL_PART1.md  ADVANCED_TECHNICAL_PART2.md  ADVANCED_TECHNICAL_PART3.md  AI金融应用系统_非技术用户指南.md  ALIYUN_CONFIG_GUIDE.md  ALIYUN_CONFIG_SUMMARY.txt  ANALYSIS_COMPLETE_SUMMARY.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE_DEEP_ANALYSIS.md  ARCHITECTURE_VISUAL_DIAGRAMS.md  ASA.code-workspace  ASA技术.md  ASA项目完整技术文档.md  BUG_FIX_REPORT.md  CHANGELOG.md  CODE_vs_DOCUMENTATION_ANALYSIS.md  COMPLETE_TECHNICAL_DELIVERY.md  COMPLETION_CHECKLIST.py  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_PROMPT_TESTS.md  CORE_CAPABILITY_VALIDATION_PROMPTS.md  CRITICAL_FIXES_QUICK_REFERENCE.md  CRITICAL_FIXES_SUMMARY.md  EXECUTIVE_SUMMARY.txt  FILE_MANIFEST.md  FINAL_SUMMARY.py  FINETUNING_QA.md  FIXES_EXECUTION_REPORT.txt  FIXES_IMPLEMENTATION_GUIDE.md  FIXES_QUICK_REFERENCE.md  FIXES_SUMMARY.md  GRADIO_INTEGRATION_COMPLETE.txt  GRADIO_INTEGRATION_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  INTERNSHIP_PROJECTS_RECOMMENDATION.md  ISSUES_ANALYSIS_AND_FIXES.md  ISSUES_FIXES_QUICK_GUIDE.md  (+220 more)
config/: agents.yaml
config/prompts/: coder.txt  reviewer.txt
教学/: ASA项目优化建议-记忆与架构.md  ASA项目可借鉴OpenCode的设计点.md  ASA项目简历优化与面试准备.md  OpenCode关键代码示例.md  OpenCode架构分析.md  如何借鉴OpenCode构建Agent.md  架构对比图.md  核心发现总结.md  金融Agent开源项目分析与优化建议.md
