[project]
name = "ts-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.49.1",
    "jieba>=0.42.1",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "pandas>=2.3.3",
    "rank-bm25>=0.2.2",
    "tabulate>=0.9.0",
    "tushare>=1.4.24",
    "langchain-huggingface>=0.0.1",
    "chromadb>=0.4.0",
    "sentence-transformers>=3.0.0",
]
